--- a/network_visualization/site/index.html
+++ b/network_visualization/site/index.html
@@ -8,7 +8,7 @@
     <title>Network</title>
 
     <link rel="stylesheet" href="style.css">
-    <script src="d3.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.2.1/d3.min.js" integrity="sha512-wkduu4oQG74ySorPiSRStC0Zl8rQfjr/Ty6dMvYTmjZw6RS5bferdx8TR7ynxeh79ySEp/benIFFisKofMjPbg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 
 <body>
