--- a/src/network_visualization/site/index.html
+++ b/src/network_visualization/site/index.html
@@ -13,13 +13,11 @@
 
 <body>
     <div id="content">
-        <svg>
-            <g class="links" g>
-            <g class="nodes" g>
-        </svg>
+       
     </div>
 
 
+    <script src="network.js"></script>
     <script src="main.js"></script>
 </body>
 
